--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -26,7 +26,9 @@ vecdb = { workspace = true }
 jiff = { workspace = true }
 log = { workspace = true }
 quick_cache = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
+sonic-rs = { workspace = true }
 tokio = { workspace = true }
 tower-http = { version = "0.6.6", features = ["compression-full", "trace"] }
 tracing = "0.1.41"
