--- a/websites/packages/jsconfig.json
+++ b/websites/packages/jsconfig.json
@@ -6,5 +6,5 @@
     "module": "ESNext",
     "skipLibCheck": true
   },
-  "exclude": ["assets", "scripts/packages", "scripts/bridge"]
+  "exclude": ["scripts/packages", "scripts/bridge", "spmething"]
 }
