--- a/websites/packages/tsconfig.json
+++ b/websites/packages/tsconfig.json
@@ -9,5 +9,5 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext", "WebWorker"],
     "skipLibCheck": true
   },
-  "exclude": ["assets", "scripts/packages", "scripts/bridge"]
+  "exclude": ["scripts/packages", "scripts/bridge"]
 }
