--- a/crates/brk_mcp/Cargo.toml
+++ b/crates/brk_mcp/Cargo.toml
@@ -18,3 +18,6 @@ brk_rmcp = { version = "0.7.1", features = [
 ] }
 log = { workspace = true }
 serde_json = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
