--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,10 +42,10 @@ debug-assertions = false
 
 [workspace.dependencies]
 allocative = { version = "0.3.4", features = ["parking_lot"] }
-axum = "0.8.4"
+axum = "0.8.5"
 bitcoin = { version = "0.32.7", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
-brk_bridge = { version = "0.0.109", path = "crates/brk_bridge" }
+brk_binder = { version = "0.0.109", path = "crates/brk_binder" }
 brk_bundler = { version = "0.0.109", path = "crates/brk_bundler" }
 brk_cli = { version = "0.0.109", path = "crates/brk_cli" }
 brk_computer = { version = "0.0.109", path = "crates/brk_computer" }
@@ -68,10 +68,10 @@ minreq = { version = "2.14.1", features = ["https", "serde_json"] }
 parking_lot = "0.12.4"
 quick_cache = "0.6.16"
 rayon = "1.11.0"
+schemars = "1.0.4"
 serde = "1.0.228"
 serde_bytes = "0.11.19"
 serde_derive = "1.0.228"
-serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 sonic-rs = "0.5.5"
 tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
 # vecdb = { path = "../seqdb/crates/vecdb", features = ["derive"]}
