--- a/crates/brk_error/Cargo.toml
+++ b/crates/brk_error/Cargo.toml
@@ -15,6 +15,6 @@ bitcoincore-rpc = { workspace = true }
 fjall = { workspace = true }
 jiff = { workspace = true }
 minreq = { workspace = true }
-serde_json = { workspace = true }
+sonic-rs = { workspace = true }
 vecdb = { workspace = true }
 zerocopy = { workspace = true }
