--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -19,8 +19,8 @@ brk_structs = { workspace = true }
 vecdb = { workspace = true }
 derive_deref = { workspace = true }
 quick_cache = { workspace = true }
-schemars = "1.0.4"
+schemars = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
+sonic-rs = { workspace = true }
 serde_with = "3.14.1"
 nucleo-matcher = "0.3.1"
