--- a/modules/brk-resources/tsconfig.json
+++ b/modules/brk-resources/tsconfig.json
@@ -9,5 +9,5 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext", "WebWorker"],
     "skipLibCheck": true
   },
-  "exclude": ["assets", "scripts/modules"]
+  "exclude": ["dist"]
 }
