--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ debug-assertions = false
 
 [workspace.dependencies]
 allocative = { version = "0.3.4", features = ["parking_lot"] }
-axum = "0.8.5"
+axum = "0.8.6"
 bitcoin = { version = "0.32.7", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
 brk_binder = { version = "0.0.109", path = "crates/brk_binder" }
@@ -72,6 +72,7 @@ schemars = "1.0.4"
 serde = "1.0.228"
 serde_bytes = "0.11.19"
 serde_derive = "1.0.228"
+serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 sonic-rs = "0.5.5"
 tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
 # vecdb = { path = "../seqdb/crates/vecdb", features = ["derive"]}
