--- a/crates/brk_mcp/Cargo.toml
+++ b/crates/brk_mcp/Cargo.toml
@@ -19,7 +19,7 @@ brk_rmcp = { version = "0.7.1", features = [
 log = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
-serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
+serde_json = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["serde_json"]
