--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -17,7 +17,7 @@ brk_error = { workspace = true }
 brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_store = { workspace = true }
-brk_vecs = { workspace = true }
+brk_traversable = { workspace = true }
 vecdb = { workspace = true }
 fjall = { workspace = true }
 log = { workspace = true }
