--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -16,6 +16,7 @@ brk_error = { workspace = true }
 brk_indexer = { workspace = true }
 brk_parser = { workspace = true }
 brk_structs = { workspace = true }
+brk_traversable = { workspace = true }
 vecdb = { workspace = true }
 derive_deref = { workspace = true }
 quick_cache = { workspace = true }
