--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -10,7 +10,7 @@ rust-version.workspace = true
 build = "build.rs"
 
 [dependencies]
-aide = { workspace = true , features = ["axum-json", "axum-query"] }
+aide = { workspace = true }
 axum = { workspace = true }
 bitcoin = { workspace = true }
 bitcoincore-rpc = { workspace = true }
@@ -23,6 +23,7 @@ brk_logger = { workspace = true }
 brk_mcp = { workspace = true }
 brk_parser = { workspace = true }
 brk_structs = { workspace = true }
+brk_traversable = { workspace = true }
 vecdb = { workspace = true }
 jiff = { workspace = true }
 log = { workspace = true }
