--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -10,6 +10,7 @@ rust-version.workspace = true
 build = "build.rs"
 
 [dependencies]
+bitcoin = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 brk_computer = { workspace = true }
 brk_error = { workspace = true }
