--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -24,4 +24,4 @@ quick_cache = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-nucleo-matcher = "0.3.1"
+rustc-hash = "2.1.1"
