global: snapshot + monitor: add addresses to mempool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ brk_interface = { version = "0.0.111", path = "crates/brk_interface" }
 brk_logger = { version = "0.0.111", path = "crates/brk_logger" }
 brk_mcp = { version = "0.0.111", path = "crates/brk_mcp" }
 brk_monitor = { version = "0.0.111", path = "crates/brk_monitor" }
-brk_parser = { version = "0.0.111", path = "crates/brk_parser" }
+brk_reader = { version = "0.0.111", path = "crates/brk_reader" }
 brk_server = { version = "0.0.111", path = "crates/brk_server" }
 brk_store = { version = "0.0.111", path = "crates/brk_store" }
 brk_structs = { version = "0.0.111", path = "crates/brk_structs" }
@@ -78,7 +78,7 @@ serde_bytes = "0.11.19"
 serde_derive = "1.0.228"
 serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 sonic-rs = "0.5.5"
-tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
+tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
 vecdb = { path = "../seqdb/crates/vecdb", features = ["derive"] }
 # vecdb = { version = "0.2.17", features = ["derive"] }
 zerocopy = { version = "0.8.27", features = ["derive"] }
