--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -19,10 +19,10 @@ brk_fetcher = { workspace = true }
 brk_indexer = { workspace = true }
 brk_interface = { workspace = true }
 brk_logger = { workspace = true }
-brk_parser = { workspace = true }
+brk_reader = { workspace = true }
 brk_server = { workspace = true }
 vecdb = { workspace = true }
-clap = { version = "4.5.48", features = ["derive", "string"] }
+clap = { version = "4.5.49", features = ["derive", "string"] }
 color-eyre = "0.6.5"
 log = { workspace = true }
 minreq = { workspace = true }
