--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -18,7 +18,7 @@ brk_fetcher = { workspace = true }
 brk_grouper = { workspace = true }
 brk_indexer = { workspace = true }
 brk_logger = { workspace = true }
-brk_parser = { workspace = true }
+brk_reader = { workspace = true }
 brk_store = { workspace = true }
 brk_structs = { workspace = true }
 brk_traversable = { workspace = true }
