--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "brk_indexer"
-description = "A Bitcoin indexer built on top of brk_parser"
+description = "A Bitcoin indexer built on top of brk_reader"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -15,7 +15,7 @@ bitcoincore-rpc = { workspace = true }
 brk_error = { workspace = true }
 brk_grouper = { workspace = true }
 brk_logger = { workspace = true }
-brk_parser = { workspace = true }
+brk_reader = { workspace = true }
 brk_store = { workspace = true }
 brk_structs = { workspace = true }
 brk_traversable = { workspace = true }
