--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -15,7 +15,7 @@ bitcoincore-rpc = { workspace = true }
 brk_computer = { workspace = true }
 brk_error = { workspace = true }
 brk_indexer = { workspace = true }
-brk_parser = { workspace = true }
+brk_reader = { workspace = true }
 brk_structs = { workspace = true }
 brk_traversable = { workspace = true }
 derive_deref = { workspace = true }
