--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -21,7 +21,7 @@ brk_indexer = { workspace = true }
 brk_interface = { workspace = true }
 brk_logger = { workspace = true }
 brk_mcp = { workspace = true }
-brk_parser = { workspace = true }
+brk_reader = { workspace = true }
 brk_structs = { workspace = true }
 brk_traversable = { workspace = true }
 vecdb = { workspace = true }
