--- a/crates/brk_grouper/Cargo.toml
+++ b/crates/brk_grouper/Cargo.toml
@@ -10,6 +10,7 @@ rust-version.workspace = true
 build = "build.rs"
 
 [dependencies]
+brk_error = { workspace = true }
 brk_structs = { workspace = true }
 brk_traversable = { workspace = true }
 vecdb = { workspace = true }
