--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -19,7 +19,9 @@ brk_reader = { workspace = true }
 brk_store = { workspace = true }
 brk_structs = { workspace = true }
 brk_traversable = { workspace = true }
-fjall = { workspace = true }
+fjall_v2 = { workspace = true }
+fjall_v3 = { workspace = true }
 log = { workspace = true }
 rayon = { workspace = true }
+rustc-hash = { workspace = true }
 vecdb = { workspace = true }
