--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,22 +23,8 @@ panic = "abort"
 strip = true
 overflow-checks = false
 
-[profile.profiling]
-inherits = "release"
-debug = true
-
 [profile.dist]
 inherits = "release"
-
-[profile.clippy]
-inherits = "dev"
-lto = "off"
-codegen-units = 256
-opt-level = 0
-debug = false
-overflow-checks = false
-panic = "abort"
-debug-assertions = false
 
 [workspace.dependencies]
 aide = { version = "0.15.2", features = ["axum-json", "axum-query"], package = "brk-aide" }
@@ -67,10 +53,11 @@ brk_traversable_derive = { version = "0.0.111", path = "crates/brk_traversable_d
 byteview = "=0.6.1"
 # byteview = "~0.8.0"
 derive_deref = "1.1.1"
-fjall_v2 = { version = "2.11.2", package = "fjall" }
-# fjall_v3 = { version = "=3.0.0-pre.0", package = "fjall" }
-fjall_v3 = { path = "../fjall", package = "fjall" }
-# fjall_v3 = { git = "https://github.com/fjall-rs/fjall.git", rev = "bb15057500dce3115d7644d268b9deeaa895b431", package = "fjall" }
+fjall2 = { path = "../fjall2", package = "fjall" }
+# fjall2 = { version = "2.11.2", package = "fjall" }
+# fjall3 = { version = "=3.0.0-pre.0", package = "fjall" }
+fjall3 = { path = "../fjall3", package = "fjall" }
+# fjall3 = { git = "https://github.com/fjall-rs/fjall.git", rev = "bb15057500dce3115d7644d268b9deeaa895b431", package = "fjall" }
 jiff = "0.2.15"
 log = "0.4.28"
 minreq = { version = "2.14.1", features = ["https", "serde_json"] }
