--- a/crates/brk_error/Cargo.toml
+++ b/crates/brk_error/Cargo.toml
@@ -12,8 +12,8 @@ build = "build.rs"
 [dependencies]
 bitcoin = { workspace = true }
 bitcoincore-rpc = { workspace = true }
-fjall_v2 = { workspace = true }
-fjall_v3 = { workspace = true }
+fjall2 = { workspace = true }
+fjall3 = { workspace = true }
 jiff = { workspace = true }
 minreq = { workspace = true }
 sonic-rs = { workspace = true }
