--- a/crates/brk_bundler/Cargo.toml
+++ b/crates/brk_bundler/Cargo.toml
@@ -12,7 +12,8 @@ build = "build.rs"
 [dependencies]
 log = { workspace = true }
 notify = "8.2.0"
-rolldown = "0.1.0"
+rolldown = { version = "0.2.3", package = "brk_rolldown" }
+# rolldown = "0.1.0"
 # brk_rolldown = "0.2.3"
 # brk_rolldown = { path = "../../../rolldown/crates/rolldown"}
 sugar_path = "1.2.0"
