--- a/crates/brk_reader/Cargo.toml
+++ b/crates/brk_reader/Cargo.toml
@@ -13,10 +13,11 @@ build = "build.rs"
 
 [dependencies]
 bitcoin = { workspace = true }
-bitcoincore-rpc = { workspace = true }
 brk_error = { workspace = true }
+brk_rpc = { workspace = true }
 brk_structs = { workspace = true }
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 derive_deref = { workspace = true }
+log = { workspace = true }
 parking_lot = { workspace = true }
 rayon = { workspace = true }
