--- a/crates/brk_iterator/Cargo.toml
+++ b/crates/brk_iterator/Cargo.toml
@@ -11,5 +11,7 @@ build = "build.rs"
 
 [dependencies]
 bitcoin = { workspace = true }
+brk_error = { workspace = true }
 brk_reader = { workspace = true }
 brk_rpc = { workspace = true }
+brk_structs = { workspace = true }
