--- a/crates/brk_monitor/Cargo.toml
+++ b/crates/brk_monitor/Cargo.toml
@@ -11,8 +11,10 @@ build = "build.rs"
 
 [dependencies]
 bitcoin = { workspace = true }
+brk_error = { workspace = true }
 brk_rpc = { workspace = true }
 brk_structs = { workspace = true }
+derive_deref = { workspace = true }
 log = { workspace = true }
 parking_lot = { workspace = true }
 rustc-hash = { workspace = true }
