--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -17,10 +17,12 @@ brk_computer = { workspace = true }
 brk_error = { workspace = true }
 brk_fetcher = { workspace = true }
 brk_indexer = { workspace = true }
-brk_query = { workspace = true }
+brk_iterator = { workspace = true }
 brk_logger = { workspace = true }
 brk_mcp = { workspace = true }
+brk_query = { workspace = true }
 brk_reader = { workspace = true }
+brk_rpc = { workspace = true }
 brk_types = { workspace = true }
 brk_traversable = { workspace = true }
 vecdb = { workspace = true }
