--- a/crates/brk/Cargo.toml
+++ b/crates/brk/Cargo.toml
@@ -20,14 +20,17 @@ full = [
     "fetcher",
     "grouper",
     "indexer",
-    "interface",
+    "iterator",
     "logger",
     "mcp",
-    "parser",
+    "monitor",
+    "query",
+    "reader",
+    "rpc",
     "server",
     "store",
-    "types",
     "traversable",
+    "types",
 ]
 binder = ["brk_binder"]
 bundler = ["brk_bundler"]
@@ -37,14 +40,17 @@ error = ["brk_error"]
 fetcher = ["brk_fetcher"]
 grouper = ["brk_grouper"]
 indexer = ["brk_indexer"]
-interface = ["brk_query"]
+iterator = ["brk_iterator"]
 logger = ["brk_logger"]
 mcp = ["brk_mcp"]
-parser = ["brk_reader"]
+monitor = ["brk_monitor"]
+query = ["brk_query"]
+reader = ["brk_reader"]
+rpc = ["brk_rpc"]
 server = ["brk_server"]
 store = ["brk_store"]
-types = ["brk_types"]
 traversable = ["brk_traversable"]
+types = ["brk_types"]
 
 [dependencies]
 brk_binder = { workspace = true, optional = true }
@@ -55,14 +61,17 @@ brk_error = { workspace = true, optional = true }
 brk_fetcher = { workspace = true, optional = true }
 brk_grouper = { workspace = true, optional = true }
 brk_indexer = { workspace = true, optional = true }
-brk_query = { workspace = true, optional = true }
+brk_iterator = { workspace = true, optional = true }
 brk_logger = { workspace = true, optional = true }
 brk_mcp = { workspace = true, optional = true }
+brk_monitor = { workspace = true, optional = true }
+brk_query = { workspace = true, optional = true }
 brk_reader = { workspace = true, optional = true }
+brk_rpc = { workspace = true, optional = true }
 brk_server = { workspace = true, optional = true }
 brk_store = { workspace = true, optional = true }
-brk_types = { workspace = true, optional = true }
 brk_traversable = { workspace = true, optional = true }
+brk_types = { workspace = true, optional = true }
 
 [package.metadata.docs.rs]
 all-features = true
