--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -16,11 +16,13 @@ brk_error = { workspace = true }
 brk_fetcher = { workspace = true }
 brk_grouper = { workspace = true }
 brk_indexer = { workspace = true }
+brk_iterator = { workspace = true }
 brk_logger = { workspace = true }
 brk_reader = { workspace = true }
+brk_rpc = { workspace = true }
 brk_store = { workspace = true }
-brk_types = { workspace = true }
 brk_traversable = { workspace = true }
+brk_types = { workspace = true }
 derive_deref = { workspace = true }
 log = { workspace = true }
 pco = "0.4.7"
