--- a/crates/brk_query/Cargo.toml
+++ b/crates/brk_query/Cargo.toml
@@ -15,8 +15,9 @@ brk_computer = { workspace = true }
 brk_error = { workspace = true }
 brk_indexer = { workspace = true }
 brk_reader = { workspace = true }
-brk_types = { workspace = true }
+brk_rpc = { workspace = true }
 brk_traversable = { workspace = true }
+brk_types = { workspace = true }
 derive_deref = { workspace = true }
 # quickmatch = { path = "../../../quickmatch" }
 quickmatch = "0.1.8"
