--- a/crates/brk_store/Cargo.toml
+++ b/crates/brk_store/Cargo.toml
@@ -16,6 +16,7 @@ brk_error = { workspace = true }
 brk_types = { workspace = true }
 byteview6 = { version = "=0.6.1", package = "byteview" }
 byteview8 = { version = "~0.8.0", package = "byteview" }
+candystore = "0.5.5"
 fjall2 = { workspace = true }
 # fjall3 = { workspace = true }
 log = { workspace = true }
