--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -21,8 +21,9 @@ brk_store = { workspace = true }
 brk_types = { workspace = true }
 brk_traversable = { workspace = true }
 fjall2 = { workspace = true }
-# fjall3 = { workspace = true }
+fjall3 = { workspace = true }
 log = { workspace = true }
 rayon = { workspace = true }
+redb = { workspace = true }
 rustc-hash = { workspace = true }
 vecdb = { workspace = true }
