--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,8 +52,8 @@ brk_store = { version = "0.0.111", path = "crates/brk_store" }
 brk_types = { version = "0.0.111", path = "crates/brk_types" }
 brk_traversable = { version = "0.0.111", path = "crates/brk_traversable", features = ["derive"] }
 brk_traversable_derive = { version = "0.0.111", path = "crates/brk_traversable_derive" }
-# byteview = "=0.6.1"
-byteview = "~0.8.0"
+byteview = "=0.6.1"
+# byteview = "~0.8.0"
 derive_deref = "1.1.1"
 fjall2 = { version = "2.11.5", package = "brk_fjall" }
 # fjall2 = { path = "../fjall2", package = "brk_fjall" }
@@ -66,9 +66,8 @@ log = "0.4.28"
 minreq = { version = "2.14.1", features = ["https", "serde_json"] }
 parking_lot = "0.12.5"
 rayon = "1.11.0"
-redb = "3.1.0"
 rustc-hash = "2.1.1"
-schemars = "1.0.5"
+schemars = "1.1.0"
 serde = "1.0.228"
 serde_bytes = "0.11.19"
 serde_derive = "1.0.228"
@@ -76,7 +75,7 @@ serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 sonic-rs = "0.5.6"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
 # vecdb = { path = "../seqdb/crates/vecdb", features = ["derive"] }
-vecdb = { version = "0.3.4", features = ["derive"] }
+vecdb = { version = "0.3.7", features = ["derive"] }
 zerocopy = { version = "0.8.27", features = ["derive"] }
 
 [workspace.metadata.release]
@@ -88,6 +87,6 @@ tag-message = "release: v{{version}}"
 [workspace.metadata.dist]
 cargo-dist-version = "0.30.2"
 ci = "github"
-# allow-dirty = ["ci"]
+allow-dirty = ["ci"]
 installers = []
 targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu"]
