--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,17 @@ panic = "abort"
 strip = true
 overflow-checks = false
 
+[profile.bloaty]
+debug = true
+lto = false
+strip = false
+inherits = "release"
+
 [profile.dist]
 inherits = "release"
 
 [workspace.dependencies]
-aide = { version = "0.15.2", features = ["axum-json", "axum-query"], package = "brk-aide" }
+aide = { version = "0.16.0-alpha.1", features = ["axum-json", "axum-query"] }
 axum = "0.8.6"
 bitcoin = { version = "0.32.7", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
@@ -73,8 +79,8 @@ serde_derive = "1.0.228"
 serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 sonic-rs = "0.5.6"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
-# vecdb = { path = "../seqdb/crates/vecdb", features = ["derive"] }
-vecdb = { version = "0.3.15", features = ["derive"] }
+vecdb = { path = "../seqdb/crates/vecdb", features = ["derive"] }
+# vecdb = { version = "0.3.16", features = ["derive"] }
 zerocopy = { version = "0.8.27", features = ["derive"] }
 
 [workspace.metadata.release]
