--- a/crates/brk_mcp/Cargo.toml
+++ b/crates/brk_mcp/Cargo.toml
@@ -16,9 +16,8 @@ brk_rmcp = { version = "0.8.0", features = [
     "transport-worker",
     "transport-streamable-http-server",
 ] }
+brk_types = { workspace = true }
 log = { workspace = true }
-schemars = { workspace = true }
-serde = { workspace = true }
 serde_json = { workspace = true }
 
 [package.metadata.cargo-machete]
