--- a/crates/brk/Cargo.toml
+++ b/crates/brk/Cargo.toml
@@ -12,6 +12,7 @@ build = "build.rs"
 [features]
 default = ["cli"]
 full = [
+    "bencher",
     "binder",
     "bundler",
     "cli",
@@ -32,6 +33,7 @@ full = [
     "traversable",
     "types",
 ]
+bencher = ["brk_bencher"]
 binder = ["brk_binder"]
 bundler = ["brk_bundler"]
 cli = ["brk_cli"]
@@ -53,6 +55,7 @@ traversable = ["brk_traversable"]
 types = ["brk_types"]
 
 [dependencies]
+brk_bencher = { workspace = true, optional = true }
 brk_binder = { workspace = true, optional = true }
 brk_bundler = { workspace = true, optional = true }
 brk_cli = { workspace = true, optional = true }
