--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -11,6 +11,7 @@ build = "build.rs"
 
 [dependencies]
 bitcoin = { workspace = true }
+brk_bencher = { workspace = true }
 brk_error = { workspace = true }
 brk_grouper = { workspace = true }
 brk_iterator = { workspace = true }
@@ -26,4 +27,3 @@ log = { workspace = true }
 rayon = { workspace = true }
 rustc-hash = { workspace = true }
 vecdb = { workspace = true }
-rand = "0.9.2"
